--- a/lk11.html
+++ b/lk11.html
@@ -154,26 +154,26 @@
               <div class="middle_part">
                 <table class="otch_p fixtable">
                   <thead>
-                  <tr class="head_t">
-                    <th>Номер / Склад</th>
-                    <th>ФИО</th>
-                    <th>Ранг на начало</th>
-                    <th>Расчетный ранг</th>
-                    <th>Скидка</th>
-                    <th>Лицевой счет</th>
-                    <th>ЛО</th>
-                    <th>ГО</th>
-                    <th>НГО</th>
-                    <th>КО</th>
-                    <th>ОО</th>
-                    <th>Резерв</th>
-                  </tr>
+                    <tr class="head_t">
+                      <th>Номер</th>
+                      <th>ФИО</th>
+                      <th>Ранг на начало</th>
+                      <th>Расчетный ранг</th>
+                      <th>Скидка</th>
+                      <th>Лицевой счет</th>
+                      <th>ЛО</th>
+                      <th>ГО</th>
+                      <th>НГО</th>
+                      <th>КО</th>
+                      <th>ОО</th>
+                      <th>Резерв</th>
+                    </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>921008</span>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
@@ -181,7 +181,11 @@
                       <td>Прив.Клиент</td>
                       <td>Консультант</td>
                       <td>33</td>
-                      <td>12123344</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
                       <td>33,24</td>
                       <td>13,4</td>
                       <td>45</td>
@@ -191,8 +195,8 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>921008</span>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
@@ -200,7 +204,11 @@
                       <td>Прив.Клиент</td>
                       <td>Консультант</td>
                       <td>33</td>
-                      <td>12123344</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
                       <td>33,24</td>
                       <td>13,4</td>
                       <td>45</td>
@@ -210,8 +218,8 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>921008</span>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
@@ -219,7 +227,11 @@
                       <td>Прив.Клиент</td>
                       <td>Консультант</td>
                       <td>33</td>
-                      <td>12123344</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
                       <td>33,24</td>
                       <td>13,4</td>
                       <td>45</td>
@@ -229,8 +241,8 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>921008</span>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
@@ -238,7 +250,11 @@
                       <td>Прив.Клиент</td>
                       <td>Консультант</td>
                       <td>33</td>
-                      <td>12123344</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
                       <td>33,24</td>
                       <td>13,4</td>
                       <td>45</td>
@@ -248,8 +264,8 @@
                     </tr>
                     <tr>
                       <td>
-                        <div class="lin_t_top">
-                          <span>921008</span>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">921008</a>
                           <span class="lt3">Томск-Кондырева</span>
                         </div>
                       </td>
@@ -257,7 +273,11 @@
                       <td>Прив.Клиент</td>
                       <td>Консультант</td>
                       <td>33</td>
-                      <td>12123344</td>
+                      <td>
+                        <div>
+                          <a href="#" class="lt3" style="text-decoration: underline; margin-bottom: 15px">12123344</a>
+                        </div>
+                      </td>
                       <td>33,24</td>
                       <td>13,4</td>
                       <td>45</td>
