--- a/lk12.html
+++ b/lk12.html
@@ -225,7 +225,10 @@
                     <tr>
                       <td>
                         <div>
-                          <span>22333</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
@@ -241,7 +244,10 @@
                     <tr>
                       <td>
                         <div>
-                          <span>22333</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
@@ -257,7 +263,10 @@
                     <tr>
                       <td>
                         <div>
-                          <span>22333</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
@@ -273,7 +282,10 @@
                     <tr>
                       <td>
                         <div>
-                          <span>22333</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
@@ -289,7 +301,10 @@
                     <tr>
                       <td>
                         <div>
-                          <span>22333</span>
+                          <div style="float: right; margin-top: 11px">
+                            <span>22333</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px">
+                          </div>
                           <a href="#" class="lt3" style="text-decoration: underline; margin-top: 15px">Просмотр / Редактирование</a>
                         </div>
                       </td>
